@@ -1,0 +1,3 @@
+
+ArrayedCollection < #String.
+
